--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Chicken Road — crash игра с RTP 98% | Как играть и где запускать онлайн</title>
-
-  <meta name="description" content="Chicken Road — популярная crash игра с высоким RTP ~98%. Правила, стратегии, сравнение с Aviator и список казино, где можно играть онлайн.">
+  <title>Chicken Road Crash Game – RTP 98%, How to Play & Where to Play Online</title>
+  <meta name="description" content="Chicken Road is a high RTP 98% crash game. Learn how to play, strategies, where to play online for real money and demo, and compare with top crash competitors.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,12 +22,12 @@
       Chicken Road
     </a>
     <ul class="nav-links">
-      <li><a href="#about">Об игре</a></li>
-      <li><a href="#features">Особенности</a></li>
-      <li><a href="#howto">Как играть</a></li>
-      <li><a href="#casinos">Где играть</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#howto">How to Play</a></li>
+      <li><a href="#where">Where to Play</a></li>
+      <li><a href="#compare">Crash Game Comparison</a></li>
     </ul>
-    <a href="#casinos" class="nav-cta"><span>Играть онлайн</span></a>
+    <a href="#where" class="nav-cta"><span>Play Now</span></a>
     <button class="mobile-menu-btn">☰</button>
   </div>
 </nav>
@@ -37,153 +36,158 @@
 <section class="hero" id="about">
   <div class="hero-container">
     <div class="hero-content">
-
       <div class="hero-badge">
-        <span>●</span> RTP ~98% • Provably Fair
+        <span>●</span> Crash Game • RTP 98% • Provably Fair
       </div>
 
-      <h1>Chicken Road — crash игра с высоким риском и быстрыми выплатами</h1>
-
+      <h1>Chicken Road – Fast-Paced Crash Game with High RTP</h1>
       <p class="hero-description">
-        Chicken Road — это азартная crash-игра, где множитель растёт с каждым шагом,
-        а задача игрока — вовремя забрать выигрыш до «краша».
-        Простые правила, высокая динамика и честный алгоритм.
+        Chicken Road is a crash-style casino game where a multiplier increases as your chicken crosses the road — cash out before the crash to win. With a high RTP of ~98% and provably fair mechanics, it combines strategy with instant excitement. :contentReference[oaicite:1]{index=1}
       </p>
 
       <div class="hero-buttons">
-        <a href="#casinos" class="btn-primary">Играть в Chicken Road →</a>
-        <a href="#howto" class="btn-secondary">Как работает игра</a>
+        <a href="#where" class="btn-primary">Play Online →</a>
+        <a href="#howto" class="btn-secondary">How It Works</a>
       </div>
 
       <div class="hero-stats">
         <div class="stat">
           <div class="stat-value">98%</div>
-          <div class="stat-label">RTP</div>
+          <div class="stat-label">Return to Player</div>
         </div>
         <div class="stat">
           <div class="stat-value">Crash</div>
-          <div class="stat-label">Жанр</div>
+          <div class="stat-label">Game Type</div>
         </div>
         <div class="stat">
-          <div class="stat-value">x?</div>
-          <div class="stat-label">Макс. множитель</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Visual / Game block -->
-    <div class="guitar-wrapper">
-      <div class="guitar-card">
-        <div class="guitar-header">
-          <span class="guitar-title">Как проходит раунд</span>
-        </div>
-        <div style="padding:20px; font-size:15px; line-height:1.6;">
-          <p><strong>1.</strong> Вы делаете ставку</p>
-          <p><strong>2.</strong> Множитель растёт шаг за шагом</p>
-          <p><strong>3.</strong> Вы нажимаете Cash Out</p>
-          <p><strong>4.</strong> Если успели — забираете выигрыш</p>
+          <div class="stat-value">Up to x500+</div>
+          <div class="stat-label">Max Multiplier</div>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Features -->
-<section class="features" id="features">
-  <div class="section-container">
-    <div class="section-header">
-      <div class="section-label">Преимущества</div>
-      <h2 class="section-title">Почему выбирают Chicken Road</h2>
-      <p class="section-description">
-        Игра сочетает простоту crash-механики и высокий потенциал выигрыша.
-      </p>
-    </div>
-
-    <div class="features-grid">
-      <div class="feature-card">
-        <h3>Высокий RTP</h3>
-        <p>Средний RTP около 98%, что выше, чем у большинства слот-игр.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Provably Fair</h3>
-        <p>Результаты раундов формируются честным и проверяемым алгоритмом.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Быстрые раунды</h3>
-        <p>Один раунд длится всего несколько секунд — идеальный формат для crash.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Минимальный порог входа</h3>
-        <p>Можно начинать с небольших ставок и тестировать стратегии.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Мобильная версия</h3>
-        <p>Игра работает в браузере на смартфонах и ПК без установки.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Альтернатива Aviator</h3>
-        <p>Отличный вариант для игроков, ищущих альтернативу Aviator и JetX.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- How to play -->
+<!-- How to Play -->
 <section class="pricing" id="howto">
   <div class="section-container">
     <div class="section-header">
-      <div class="section-label">Гайд</div>
-      <h2 class="section-title">Как играть в Chicken Road</h2>
+      <div class="section-label">Guide</div>
+      <h2 class="section-title">How to Play Chicken Road Crash Game</h2>
       <p class="section-description">
-        Пошаговое руководство для новичков.
+        A step-by-step walkthrough to get started and play responsibly.
       </p>
     </div>
 
     <div class="pricing-grid">
       <div class="pricing-card">
-        <h3>Шаг 1</h3>
-        <p>Выберите сумму ставки перед началом раунда.</p>
+        <h3>Step 1: Place Your Bet</h3>
+        <p>Select a stake based on your bankroll. Typical bet ranges go from small demo plays to real money rounds. :contentReference[oaicite:2]{index=2}</p>
       </div>
       <div class="pricing-card featured">
-        <h3>Шаг 2</h3>
-        <p>Наблюдайте за ростом множителя и решите, когда выйти.</p>
+        <h3>Step 2: Watch the Multiplier Grow</h3>
+        <p>As the chicken moves forward, the multiplier increases. Your goal is to cash out before the crash point. :contentReference[oaicite:3]{index=3}</p>
       </div>
       <div class="pricing-card">
-        <h3>Шаг 3</h3>
-        <p>Нажмите Cash Out до краша и получите выигрыш.</p>
+        <h3>Step 3: Cash Out Before Crash</h3>
+        <p>Click “Cash Out” at any point to lock in your winnings. Waiting too long means the round ends and your stake is lost. :contentReference[oaicite:4]{index=4}</p>
+      </div>
+      <div class="pricing-card">
+        <h3>Step 4: Choose Difficulty Mode</h3>
+        <p>Select from Easy, Medium, Hard or Hardcore modes — each affects risk and maximum multiplier potential. :contentReference[oaicite:5]{index=5}</p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Casinos -->
-<section class="testimonials" id="casinos">
+<!-- Where to Play -->
+<section class="testimonials" id="where">
   <div class="section-container">
     <div class="section-header">
-      <div class="section-label">Казино</div>
-      <h2 class="section-title">Где играть в Chicken Road онлайн</h2>
+      <div class="section-label">Play Options</div>
+      <h2 class="section-title">Where to Play Chicken Road Online</h2>
       <p class="section-description">
-        Игра доступна в лицензированных онлайн-казино с поддержкой crash-игр.
+        Below are reliable places and platforms where Chicken Road crash game is offered. Choose one that matches your region and preferences.
       </p>
     </div>
 
     <div class="testimonials-grid">
       <div class="testimonial-card">
         <p class="testimonial-text">
-          ✔ Лицензия <br>
-          ✔ Поддержка Chicken Road <br>
-          ✔ Быстрые выплаты
+          ✔ Licensed casino platforms with real money play<br>
+          ✔ Fast payouts and mobile-optimized experience<br>
+          ✔ Crypto support and bonus offers
         </p>
-        <a href="#" class="btn-primary">Перейти в казино</a>
+        <a href="#" class="btn-primary">Play at Recommended Casino</a>
       </div>
       <div class="testimonial-card">
         <p class="testimonial-text">
-          ✔ Демо-режим <br>
-          ✔ Бонусы для crash-игр <br>
-          ✔ Мобильная версия
+          ✔ Free demo mode available<br>
+          ✔ Practice strategies without financial risk<br>
+          ✔ Works on desktop and mobile browsers
         </p>
-        <a href="#" class="btn-primary">Играть сейчас</a>
+        <a href="#" class="btn-primary">Try Demo Mode</a>
       </div>
+      <div class="testimonial-card">
+        <p class="testimonial-text">
+          ✔ Verified platforms with customer support<br>
+          ✔ Multi-currency and region support<br>
+          ✔ Secure encryption and provably fair systems
+        </p>
+        <a href="#" class="btn-primary">View All Crash Casinos</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Crash Game Comparison -->
+<section class="features" id="compare">
+  <div class="section-container">
+    <div class="section-header">
+      <div class="section-label">Comparison</div>
+      <h2 class="section-title">Chicken Road vs Other Crash Games</h2>
+      <p class="section-description">
+        Crash games are exploding in popularity. Here’s how Chicken Road competes with top titles. :contentReference[oaicite:6]{index=6}
+      </p>
+    </div>
+
+    <table style="width:100%; border-collapse:collapse; text-align:left;">
+      <thead>
+        <tr>
+          <th>Game</th><th>RTP</th><th>Type</th><th>Features</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Chicken Road</td><td>~98%</td><td>Crash</td><td>Provably Fair, multiple modes</td>
+        </tr>
+        <tr>
+          <td>Aviator</td><td>~97%</td><td>Crash</td><td>Flight theme, social features</td>
+        </tr>
+        <tr>
+          <td>JetX</td><td>~96-97%</td><td>Crash</td><td>Flight speed curves</td>
+        </tr>
+        <tr>
+          <td>Spaceman</td><td>~96-97%</td><td>Crash</td><td>Space theme</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+<!-- FAQ -->
+<section class="cta">
+  <div class="section-container cta-content">
+    <h2>Frequently Asked Questions</h2>
+    <div>
+      <p><strong>What is Chicken Road?</strong><br>
+      A crash game where the multiplier grows as your character advances — cash out before crash to win. :contentReference[oaicite:7]{index=7}</p>
+
+      <p><strong>Is Chicken Road fair?</strong><br>
+      Yes, it uses provably fair technology so results can be verified. :contentReference[oaicite:8]{index=8}</p>
+
+      <p><strong>Can I play for free?</strong><br>
+      Many platforms offer unlimited demo mode before betting real money. :contentReference[oaicite:9]{index=9}</p>
     </div>
   </div>
 </section>
@@ -192,7 +196,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-bottom">
-      <span>© 2026 Chicken Road Guide. Информационный сайт.</span>
+      <span>© 2026 Chicken Road Crash Guide — Informational Resource</span>
     </div>
   </div>
 </footer>
