--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Chicken Road Crash Game – RTP 98%, How to Play & Where to Play Online</title>
-  <meta name="description" content="Chicken Road is a high RTP 98% crash game. Learn how to play, strategies, where to play online for real money and demo, and compare with top crash competitors.">
+  <title>Chicken Road Crash Game – RTP 98%, How to Play & Best Casinos</title>
+  <meta name="description" content="Chicken Road is a popular crash game with RTP ~98%. Learn how to play, strategies, and where to play Chicken Road online with real casino bonuses.">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<!-- Navigation -->
+<!-- NAVIGATION -->
 <nav>
   <div class="nav-container">
     <a href="#" class="logo">
@@ -25,178 +25,215 @@
       <li><a href="#about">About</a></li>
       <li><a href="#howto">How to Play</a></li>
       <li><a href="#where">Where to Play</a></li>
-      <li><a href="#compare">Crash Game Comparison</a></li>
+      <li><a href="#compare">Comparison</a></li>
     </ul>
     <a href="#where" class="nav-cta"><span>Play Now</span></a>
     <button class="mobile-menu-btn">☰</button>
   </div>
 </nav>
 
-<!-- Hero -->
+<!-- HERO -->
 <section class="hero" id="about">
   <div class="hero-container">
+
+    <!-- TEXT -->
     <div class="hero-content">
       <div class="hero-badge">
         <span>●</span> Crash Game • RTP 98% • Provably Fair
       </div>
 
-      <h1>Chicken Road – Fast-Paced Crash Game with High RTP</h1>
+      <h1>Chicken Road – High RTP Crash Casino Game</h1>
+
       <p class="hero-description">
-        Chicken Road is a crash-style casino game where a multiplier increases as your chicken crosses the road — cash out before the crash to win. With a high RTP of ~98% and provably fair mechanics, it combines strategy with instant excitement. :contentReference[oaicite:1]{index=1}
+        Chicken Road is a fast-paced crash game where the multiplier increases
+        step by step as the chicken crosses the road. Cash out before the crash
+        to secure your winnings. Simple rules, high volatility, instant action.
       </p>
 
       <div class="hero-buttons">
-        <a href="#where" class="btn-primary">Play Online →</a>
+        <a href="#where" class="btn-primary">Play Chicken Road →</a>
         <a href="#howto" class="btn-secondary">How It Works</a>
       </div>
 
       <div class="hero-stats">
         <div class="stat">
           <div class="stat-value">98%</div>
-          <div class="stat-label">Return to Player</div>
+          <div class="stat-label">RTP</div>
         </div>
         <div class="stat">
           <div class="stat-value">Crash</div>
           <div class="stat-label">Game Type</div>
         </div>
         <div class="stat">
-          <div class="stat-value">Up to x500+</div>
+          <div class="stat-value">x500+</div>
           <div class="stat-label">Max Multiplier</div>
         </div>
       </div>
     </div>
+
+    <!-- IMAGE -->
+    <div class="guitar-wrapper">
+      <div class="guitar-card">
+        <img
+          src="images/chicken-road-game.png"
+          alt="Chicken Road crash game interface showing multiplier and cash out"
+          style="width:100%;height:auto;border-radius:16px;display:block;"
+        >
+      </div>
+    </div>
+
   </div>
 </section>
 
-<!-- How to Play -->
+<!-- HOW TO PLAY -->
 <section class="pricing" id="howto">
   <div class="section-container">
     <div class="section-header">
       <div class="section-label">Guide</div>
-      <h2 class="section-title">How to Play Chicken Road Crash Game</h2>
+      <h2 class="section-title">How to Play Chicken Road</h2>
       <p class="section-description">
-        A step-by-step walkthrough to get started and play responsibly.
+        Follow these steps to start playing Chicken Road crash game online.
       </p>
     </div>
 
     <div class="pricing-grid">
       <div class="pricing-card">
-        <h3>Step 1: Place Your Bet</h3>
-        <p>Select a stake based on your bankroll. Typical bet ranges go from small demo plays to real money rounds. :contentReference[oaicite:2]{index=2}</p>
+        <h3>1. Place Your Bet</h3>
+        <p>
+          Choose your stake before the round begins. Manage your bankroll carefully,
+          especially in high-volatility crash games.
+        </p>
       </div>
+
       <div class="pricing-card featured">
-        <h3>Step 2: Watch the Multiplier Grow</h3>
-        <p>As the chicken moves forward, the multiplier increases. Your goal is to cash out before the crash point. :contentReference[oaicite:3]{index=3}</p>
+        <h3>2. Watch the Multiplier</h3>
+        <p>
+          The multiplier grows as the chicken moves forward. Each second increases
+          potential profit — but also risk.
+        </p>
       </div>
+
       <div class="pricing-card">
-        <h3>Step 3: Cash Out Before Crash</h3>
-        <p>Click “Cash Out” at any point to lock in your winnings. Waiting too long means the round ends and your stake is lost. :contentReference[oaicite:4]{index=4}</p>
+        <h3>3. Cash Out in Time</h3>
+        <p>
+          Click the Cash Out button before the crash. If the crash happens first,
+          the bet is lost.
+        </p>
       </div>
+
       <div class="pricing-card">
-        <h3>Step 4: Choose Difficulty Mode</h3>
-        <p>Select from Easy, Medium, Hard or Hardcore modes — each affects risk and maximum multiplier potential. :contentReference[oaicite:5]{index=5}</p>
+        <h3>4. Choose Difficulty Mode</h3>
+        <p>
+          Easy, Medium, Hard, and Hardcore modes affect crash frequency
+          and maximum multiplier potential.
+        </p>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Where to Play -->
+<!-- WHERE TO PLAY -->
 <section class="testimonials" id="where">
   <div class="section-container">
     <div class="section-header">
-      <div class="section-label">Play Options</div>
+      <div class="section-label">Casinos</div>
       <h2 class="section-title">Where to Play Chicken Road Online</h2>
       <p class="section-description">
-        Below are reliable places and platforms where Chicken Road crash game is offered. Choose one that matches your region and preferences.
+        Play Chicken Road at trusted online casinos offering real money,
+        demo mode, and exclusive bonuses.
       </p>
     </div>
 
-    <div class="testimonials-grid">
-      <div class="testimonial-card">
-        <p class="testimonial-text">
-          ✔ Licensed casino platforms with real money play<br>
-          ✔ Fast payouts and mobile-optimized experience<br>
-          ✔ Crypto support and bonus offers
-        </p>
-        <a href="#" class="btn-primary">Play at Recommended Casino</a>
-      </div>
-      <div class="testimonial-card">
-        <p class="testimonial-text">
-          ✔ Free demo mode available<br>
-          ✔ Practice strategies without financial risk<br>
-          ✔ Works on desktop and mobile browsers
-        </p>
-        <a href="#" class="btn-primary">Try Demo Mode</a>
-      </div>
-      <div class="testimonial-card">
-        <p class="testimonial-text">
-          ✔ Verified platforms with customer support<br>
-          ✔ Multi-currency and region support<br>
-          ✔ Secure encryption and provably fair systems
-        </p>
-        <a href="#" class="btn-primary">View All Crash Casinos</a>
-      </div>
+    <div style="overflow-x:auto;">
+      <table style="width:100%;border-collapse:collapse;">
+        <thead>
+          <tr>
+            <th>Casino</th>
+            <th>Welcome Bonus</th>
+            <th>Key Features</th>
+            <th>Rating</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>Stake</strong></td>
+            <td>$10 No Deposit + Rakeback</td>
+            <td>Crypto, instant payouts</td>
+            <td>★★★★★</td>
+          </tr>
+          <tr>
+            <td><strong>1xBet</strong></td>
+            <td>100% up to $100 + Free Spins</td>
+            <td>Global access, fast withdrawals</td>
+            <td>★★★★★</td>
+          </tr>
+          <tr>
+            <td><strong>MelBet</strong></td>
+            <td>100% up to $130</td>
+            <td>Crash games focus</td>
+            <td>★★★★½</td>
+          </tr>
+          <tr>
+            <td><strong>1Win</strong></td>
+            <td>500% up to $1,200</td>
+            <td>High bonus value</td>
+            <td>★★★★⭐</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </section>
 
-<!-- Crash Game Comparison -->
+<!-- COMPARISON -->
 <section class="features" id="compare">
   <div class="section-container">
     <div class="section-header">
       <div class="section-label">Comparison</div>
       <h2 class="section-title">Chicken Road vs Other Crash Games</h2>
       <p class="section-description">
-        Crash games are exploding in popularity. Here’s how Chicken Road competes with top titles. :contentReference[oaicite:6]{index=6}
+        How Chicken Road compares with the most popular crash games.
       </p>
     </div>
 
-    <table style="width:100%; border-collapse:collapse; text-align:left;">
-      <thead>
-        <tr>
-          <th>Game</th><th>RTP</th><th>Type</th><th>Features</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Chicken Road</td><td>~98%</td><td>Crash</td><td>Provably Fair, multiple modes</td>
-        </tr>
-        <tr>
-          <td>Aviator</td><td>~97%</td><td>Crash</td><td>Flight theme, social features</td>
-        </tr>
-        <tr>
-          <td>JetX</td><td>~96-97%</td><td>Crash</td><td>Flight speed curves</td>
-        </tr>
-        <tr>
-          <td>Spaceman</td><td>~96-97%</td><td>Crash</td><td>Space theme</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</section>
-
-<!-- FAQ -->
-<section class="cta">
-  <div class="section-container cta-content">
-    <h2>Frequently Asked Questions</h2>
-    <div>
-      <p><strong>What is Chicken Road?</strong><br>
-      A crash game where the multiplier grows as your character advances — cash out before crash to win. :contentReference[oaicite:7]{index=7}</p>
-
-      <p><strong>Is Chicken Road fair?</strong><br>
-      Yes, it uses provably fair technology so results can be verified. :contentReference[oaicite:8]{index=8}</p>
-
-      <p><strong>Can I play for free?</strong><br>
-      Many platforms offer unlimited demo mode before betting real money. :contentReference[oaicite:9]{index=9}</p>
+    <div class="features-grid">
+      <div class="feature-card">
+        <h3>Chicken Road</h3>
+        <p>RTP ~98%, multiple difficulty modes, provably fair.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Aviator</h3>
+        <p>RTP ~97%, social features, industry leader.</p>
+      </div>
+      <div class="feature-card">
+        <h3>JetX</h3>
+        <p>RTP ~96-97%, fast gameplay.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Spaceman</h3>
+        <p>RTP ~96%, space-themed crash mechanics.</p>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- Footer -->
+<!-- CTA -->
+<section class="cta">
+  <div class="section-container cta-content">
+    <h2>Ready to Play Chicken Road?</h2>
+    <p>
+      Try the demo or play for real money at trusted crash game casinos.
+      Always gamble responsibly.
+    </p>
+    <a href="#where" class="btn-primary">Play Now →</a>
+  </div>
+</section>
+
+<!-- FOOTER -->
 <footer>
   <div class="footer-container">
     <div class="footer-bottom">
-      <span>© 2026 Chicken Road Crash Guide — Informational Resource</span>
+      <span>© 2026 Chicken Road Guide — Informational Website</span>
     </div>
   </div>
 </footer>
