--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="guitar-wrapper">
       <div class="guitar-card">
         <img
-          src="images/chicken-road-game.png"
+          src="chicken-road-game.png.png"
           alt="Chicken Road crash game interface showing multiplier and cash out"
           style="width:100%;height:auto;border-radius:16px;display:block;"
         >
@@ -240,3 +240,4 @@
 
 </body>
 </html>
+
