--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- TEXT -->
     <div class="hero-content">
       <div class="hero-badge">
-        <span>●</span> Crash Game • RTP 98% • Provably Fair
+        <span>●</span>Chicken Road features a theoretical RTP of ~98%. As a crash game, outcomes depend on player decisions and timing.
       </div>
 
       <h1>Chicken Road – High RTP Crash Casino Game</h1>
@@ -240,5 +240,6 @@
 
 </body>
 </html>
+
 
 
