--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
             <td><strong>MelBet</strong></td>
             <td>100% up to $130</td>
             <td>Crash games focus</td>
-            <td>★★★★½</td>
+            <td>★★★★</td>
           </tr>
           <tr>
             <td><strong>1Win</strong></td>
             <td>500% up to $1,200</td>
             <td>High bonus value</td>
-            <td>★★★★⭐</td>
+            <td>★★★</td>
           </tr>
         </tbody>
       </table>
@@ -213,6 +213,14 @@
         <h3>Spaceman</h3>
         <p>RTP ~96%, space-themed crash mechanics.</p>
       </div>
+      <div class="feature-card">
+        <h3>RocketX</h3>
+        <p>RTP ~97%, minimalistic design, high volatility.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Crash (Original / Crash Games by casinos)</h3>
+        <p>RTP ~95–97%, classic crash mechanics, widely available.</p>
+      </div>
     </div>
   </div>
 </section>
@@ -240,6 +248,7 @@
 
 </body>
 </html>
+
 
 
 
