--- a/index.html
+++ b/index.html
@@ -97,35 +97,57 @@
     </div>
 
     <div class="pricing-grid">
-      <div class="pricing-card">
-        <h3>1. Place Your Bet</h3>
+      <!-- Block 1 -->
+      <div class="pricing-card" style="background-color:#4CAF50;color:#fff;">
+        <h3>🟩 Block 1 — Place Your Bet</h3>
         <p>
-          Choose your stake before the round begins. Manage your bankroll carefully,
-          especially in high-volatility crash games.
+          <strong>Place Your Bet</strong><br>
+          Choose your stake before the round starts. Chicken Road is a high-volatility crash game, so responsible bankroll management is essential.
         </p>
       </div>
 
-      <div class="pricing-card featured">
-        <h3>2. Watch the Multiplier</h3>
+      <!-- Block 2 -->
+      <div class="pricing-card" style="background-color:#FFEB3B;color:#000;">
+        <h3>🟨 Block 2 — Watch the Multiplier</h3>
         <p>
-          The multiplier grows as the chicken moves forward. Each second increases
-          potential profit — but also risk.
+          <strong>Watch the Multiplier Grow</strong><br>
+          As the chicken moves forward, the multiplier increases in real time. The longer you stay in the round, the higher the potential payout — and the higher the risk.
         </p>
       </div>
 
-      <div class="pricing-card">
-        <h3>3. Cash Out in Time</h3>
+      <!-- Block 3 -->
+      <div class="pricing-card" style="background-color:#F44336;color:#fff;">
+        <h3>🟥 Block 3 — Cash Out Before the Crash</h3>
         <p>
-          Click the Cash Out button before the crash. If the crash happens first,
-          the bet is lost.
+          <strong>Cash Out in Time</strong><br>
+          Click the Cash Out button before the crash occurs. If the crash happens first, the bet is lost.
         </p>
       </div>
 
-      <div class="pricing-card">
-        <h3>4. Choose Difficulty Mode</h3>
+      <!-- Block 4 -->
+      <div class="pricing-card" style="background-color:#2196F3;color:#fff;">
+        <h3>🟦 Block 4 — Select Difficulty Mode</h3>
         <p>
-          Easy, Medium, Hard, and Hardcore modes affect crash frequency
-          and maximum multiplier potential.
+          <strong>Choose a Difficulty Mode</strong><br>
+          Chicken Road offers multiple difficulty levels — Easy, Medium, Hard, and Hardcore. Each mode affects crash frequency and maximum multiplier potential.
+        </p>
+      </div>
+
+      <!-- Block 5 -->
+      <div class="pricing-card" style="background-color:#9C27B0;color:#fff;">
+        <h3>🟪 Block 5 — Understand the Risk</h3>
+        <p>
+          <strong>Understand the Risk</strong><br>
+          Chicken Road is based on timing and decision-making. Results vary, and no strategy guarantees profit.
+        </p>
+      </div>
+
+      <!-- Block 6 -->
+      <div class="pricing-card" style="background-color:#795548;color:#fff;">
+        <h3>🟫 Block 6 — Play Responsibly</h3>
+        <p>
+          <strong>Play Responsibly</strong><br>
+          Set limits and play for entertainment. Crash games can be fast-paced and unpredictable.
         </p>
       </div>
     </div>
@@ -248,6 +270,7 @@
 
 </body>
 </html>
+
 
 
 
