--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
     <div class="pricing-grid">
       <!-- Block 1 -->
-      <div class="pricing-card" style="background-color:#4CAF50;color:#fff;">
-        <h3>🟩 Block 1 — Place Your Bet</h3>
+      <div class="pricing-card">
+        <h3>1. Place Your Bet</h3>
         <p>
           <strong>Place Your Bet</strong><br>
           Choose your stake before the round starts. Chicken Road is a high-volatility crash game, so responsible bankroll management is essential.
@@ -107,8 +107,8 @@
       </div>
 
       <!-- Block 2 -->
-      <div class="pricing-card" style="background-color:#FFEB3B;color:#000;">
-        <h3>🟨 Block 2 — Watch the Multiplier</h3>
+      <div class="pricing-card featured">
+        <h3>2. Watch the Multiplier</h3>
         <p>
           <strong>Watch the Multiplier Grow</strong><br>
           As the chicken moves forward, the multiplier increases in real time. The longer you stay in the round, the higher the potential payout — and the higher the risk.
@@ -116,8 +116,8 @@
       </div>
 
       <!-- Block 3 -->
-      <div class="pricing-card" style="background-color:#F44336;color:#fff;">
-        <h3>🟥 Block 3 — Cash Out Before the Crash</h3>
+      <div class="pricing-card">
+        <h3>3. Cash Out Before the Crash</h3>
         <p>
           <strong>Cash Out in Time</strong><br>
           Click the Cash Out button before the crash occurs. If the crash happens first, the bet is lost.
@@ -125,8 +125,8 @@
       </div>
 
       <!-- Block 4 -->
-      <div class="pricing-card" style="background-color:#2196F3;color:#fff;">
-        <h3>🟦 Block 4 — Select Difficulty Mode</h3>
+      <div class="pricing-card">
+        <h3>4. Select Difficulty Mode</h3>
         <p>
           <strong>Choose a Difficulty Mode</strong><br>
           Chicken Road offers multiple difficulty levels — Easy, Medium, Hard, and Hardcore. Each mode affects crash frequency and maximum multiplier potential.
@@ -134,8 +134,8 @@
       </div>
 
       <!-- Block 5 -->
-      <div class="pricing-card" style="background-color:#9C27B0;color:#fff;">
-        <h3>🟪 Block 5 — Understand the Risk</h3>
+      <div class="pricing-card">
+        <h3>5. Understand the Risk</h3>
         <p>
           <strong>Understand the Risk</strong><br>
           Chicken Road is based on timing and decision-making. Results vary, and no strategy guarantees profit.
@@ -143,8 +143,8 @@
       </div>
 
       <!-- Block 6 -->
-      <div class="pricing-card" style="background-color:#795548;color:#fff;">
-        <h3>🟫 Block 6 — Play Responsibly</h3>
+      <div class="pricing-card">
+        <h3>6. Play Responsibly</h3>
         <p>
           <strong>Play Responsibly</strong><br>
           Set limits and play for entertainment. Crash games can be fast-paced and unpredictable.
@@ -153,6 +153,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- WHERE TO PLAY -->
 <section class="testimonials" id="where">
@@ -270,6 +271,7 @@
 
 </body>
 </html>
+
 
 
 
