--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
 
       <!-- Block 2 -->
-      <div class="pricing-card featured">
+      <div class="pricing-card">
         <h3>2. Watch the Multiplier</h3>
         <p>
           <strong>Watch the Multiplier Grow</strong><br>
@@ -271,6 +271,7 @@
 
 </body>
 </html>
+
 
 
 
